# cctab

./: .gitignore  README.md  pyproject.toml  smoke_test.py
.claude/: spec.config.json
.claude/agents/: data-layer.md  testing.md  tui-layer.md
.claude/rules/: spec-pipeline.md
docs/canonical/: daily-cost-view.md
scripts/: spec-patterns.sh
specs/20260616/: 01-daily-cost-by-model.md  02-cwd-only-daily.md  03-per-dir-margin-config.md  04-row-select-csv-copy.md  05-transcript-discovery-and-dedup.md
src/cctab/: __init__.py  __main__.py  app.py  data.py
src/cctop/: __init__.py  __main__.py  app.py  data.py
tests/: test_app.py  test_data.py
