[project]
name = "cctop"
version = "0.1.0"
description = "htop-style TUI for Claude Code token usage, per directory"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["textual>=0.86"]

[project.scripts]
cctop = "cctop.app:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cctop"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
