[project]
name = "cctab"
version = "0.3.0"
description = "Terminal TUI that turns Claude Code usage into an API-rate cost estimate for client billing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["textual>=0.86"]

[project.scripts]
cctab = "cctab.app:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cctab"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
